feat: Implement core intelligence framework with document loading, indexing, and caching
- Added DefaultDocumentLoader for loading documents from various sources.
- Created CodebaseIntelligence manager to coordinate intelligence operations.
- Introduced IndexMode enum for indexing strategies (VECTOR, GRAPH, HYBRID).
- Developed VectorIndexStrategy for handling vector store indexing.
- Established interfaces for dependency injection compliance.
- Implemented resource managers for centralized management of configurations, caching, prompts, and Qdrant connections.
- Integrated FastAPI dependency injection patterns for resource sharing.
- Enhanced error handling and logging throughout the intelligence framework.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+**/__pycache__/
+*.pyc
 *.so
 .Python
 build/
@@ -94,6 +96,10 @@ temp_docs/
 chroma_data/
 qdrant_storage/
 test_data/
+
+# Storage directories (indexed documents)
+storage/docs_*/
+storage/workflows/
 poetry.lock
 
 # Claude Code specific
@@ -103,3 +109,25 @@ docs/research/
 scripts/research.py
 CLAUDE.md.mypy_cache/
 api.log
+
+# Migration and backup files
+*_old_backup.py
+*_backup.py
+*_v2.py
+*_old.py
+*.bak
+*.orig
+
+# MCP and API server artifacts
+mcp_server.log
+fastapi_server.log
+uvicorn.log
+
+# Development artifacts
+benchmark_*.py
+temp_*.py
+
+# Migration tracking files
+*MIGRATION*TRACKER*.md
+DAILY_PROGRESS.md
+docs/generated/
